--- a/src/app/shared/culture-steps-form/culture-steps-form.component.html
+++ b/src/app/shared/culture-steps-form/culture-steps-form.component.html
@@ -1,19 +1,14 @@
-<div class="culture-form ui-widget">
-  <header>
-    <h1 i18n>Culture edition</h1>
-  </header>
+<div class="culture-steps-form">
+  <p-steps [model]="steps"
+           [readonly]="false"
+           [activeIndex]="activeStepIndex$ | async"
+           (activeIndexChange)="onActiveStepChange($event.index)"
+  ></p-steps>
 
-  <pc-culture-steps-form (validCultureChange)="onTest($event)"
-  ></pc-culture-steps-form>
+  <form #cultureForm="ngForm">
 
-  <h1>OLD DATA</h1>
-
-  <form #cultureForm="ngForm" (submit)="onSubmit()" class="pc-form"
-  >
-
-    <div class="row">
-
-      <div class="col">
+    <div [ngSwitch]="activeStepId$ | async" class="pc-form">
+      <div *ngSwitchCase="STEP_ID_CULTURE">
 
         <div class="row" *templateVar="cropRef | async; let model">
           <span class="form-icon"><pc-seedlings-icon></pc-seedlings-icon></span>
@@ -26,7 +21,7 @@
                             #control="ngModel"
             ></pc-crop-select>
             <pc-validation-errors [errorsKeys]="model.validationErrors"
-                                  *ngIf="control.touched"
+                                  
             ></pc-validation-errors>
           </span>
         </div>
@@ -42,20 +37,17 @@
                            #control="ngModel"
             ></pc-bed-select>
             <pc-validation-errors [errorsKeys]="model.validationErrors"
-                                  *ngIf="control.touched"
             ></pc-validation-errors>
           </span>
         </div>
 
-        <section class="germination">
-          <h2>
-            <span class="form-icon"><pc-sowing-icon></pc-sowing-icon></span>
-            <span>Sowing</span>
-          </h2>
+      </div>
 
-          <div class="row" *templateVar="sowingDate | async; let model">
-            <label i18n>Sowing date</label>
-            <span>
+      <div *ngSwitchCase="STEP_ID_DATES">
+
+        <div class="row" *templateVar="sowingDate | async; let model">
+          <label i18n>Sowing date</label>
+          <span>
               <pc-date-select [ngModel]="model.propertyValue"
                               (ngModelChange)="onSowingDateChange($event)"
                               [name]="model.property"
@@ -63,14 +55,13 @@
                               #control="ngModel"
               ></pc-date-select>
               <pc-validation-errors [errorsKeys]="model.validationErrors"
-                                    *ngIf="control.touched"
               ></pc-validation-errors>
             </span>
-          </div>
+        </div>
 
-          <div class="row" *templateVar="daysUntilGermination | async; let model">
-            <label i18n>Germination</label>
-            <span class="germination">
+        <div class="row" *templateVar="daysUntilGermination | async; let model">
+          <label i18n>Germination</label>
+          <span class="germination">
               <div class="days-until">
                 <div>
                   <p-spinner [ngModel]="model.propertyValue"
@@ -84,7 +75,6 @@
                   <label i18n class="unit">days</label>
                 </div>
                 <pc-validation-errors [errorsKeys]="model.validationErrors"
-                                      *ngIf="control.touched"
                 ></pc-validation-errors>
               </div>
               <div class="end-date">
@@ -98,19 +88,11 @@
                   </span>
               </div>
             </span>
-          </div>
-        </section>
+        </div>
 
-
-        <section class="harvest">
-          <h2>
-            <span class="form-icon"><pc-harvest-icon></pc-harvest-icon></span>
-            <span>Harvest</span>
-          </h2>
-
-          <div class="row" *templateVar="daysUntilFirstHarvest | async; let model">
-            <label i18n>First harvest</label>
-            <span>
+        <div class="row" *templateVar="daysUntilFirstHarvest | async; let model">
+          <label i18n>First harvest</label>
+          <span>
               <div class="days-until">
                 <div>
                   <p-spinner [ngModel]="model.propertyValue"
@@ -124,7 +106,6 @@
                   <label i18n class="unit">days after sowing</label>
                 </div>
                 <pc-validation-errors [errorsKeys]="model.validationErrors"
-                                      *ngIf="control.touched"
                 ></pc-validation-errors>
               </div>
               <div class="end-date">
@@ -135,12 +116,11 @@
                   ></pc-date-select>
               </div>
             </span>
-          </div>
+        </div>
 
-
-          <div class="row" *templateVar="harvestDayDuration | async; let model">
-            <label i18n>Last harvest</label>
-            <span>
+        <div class="row" *templateVar="harvestDayDuration | async; let model">
+          <label i18n>Last harvest</label>
+          <span>
               <div class="days-until">
                 <div>
                   <p-spinner [ngModel]="model.propertyValue"
@@ -154,7 +134,6 @@
                   <label i18n class="unit">days after first harvest</label>
                 </div>
                 <pc-validation-errors [errorsKeys]="model.validationErrors"
-                                      *ngIf="control.touched"
                 ></pc-validation-errors>
               </div>
               <div class="end-date">
@@ -165,8 +144,11 @@
                   ></pc-date-select>
               </div>
             </span>
-          </div>
-        </section>
+        </div>
+
+
+      </div>
+      <div *ngSwitchCase="STEP_ID_PREPARATION">
 
         <div class="row">
           <span class="form-icon"><pc-nursing-icon></pc-nursing-icon></span>
@@ -187,14 +169,13 @@
                            (ngModelChange)="onNursingDurationChange($event)"
                            [name]="'nursing'+model.property"
                            required
-                           [min]="1" [step]="1"
+                           [min]="2" [step]="1"
                            [size]="4"
                            #control="ngModel"
                 ></p-spinner>
                 <label i18n class="unit">days</label>
               </div>
               <pc-validation-errors [errorsKeys]="model.validationErrors"
-                                    *ngIf="control.touched"
               ></pc-validation-errors>
             </span>
           </div>
@@ -207,7 +188,6 @@
           </div>
 
         </section>
-
 
         <div class="row">
           <span class="form-icon"><pc-ground-cover-icon></pc-ground-cover-icon></span>
@@ -229,7 +209,6 @@
                                               #control="ngModel"
               ></pc-bed-preparation-type-select>
               <pc-validation-errors [errorsKeys]="model.validationErrors"
-                                    *ngIf="control.touched"
               ></pc-validation-errors>
             </span>
           </div>
@@ -249,65 +228,33 @@
                 <label i18n class="unit">days</label>
               </div>
               <pc-validation-errors [errorsKeys]="model.validationErrors"
-                                    *ngIf="control.touched"
               ></pc-validation-errors>
             </span>
           </div>
         </section>
+
+
       </div>
-
-      <div class="col">
-        <section class="bed-occupancy" *ngIf="(bedOccupancyStartValue | async) != null">
-          <div class="row">
-            <label i18n>Bed occupancy</label>
-            <span class="values">
-              <div class="value">
-                <label i18n>From</label>
-                <span>{{ bedOccupancyStartValue | async | date }}</span>
-              </div>
-              <div class="value">
-                <label i18n>To</label>
-                <span>{{ bedOccupancyEndValue | async | date }}</span>
-              </div>
-            </span>
-          </div>
-
-        </section>
-
-
-        <label i18n>Notes</label>
-        <div class="editor" *templateVar="htmlNotes | async; let model">
-          <p-editor [ngModel]="model.propertyValue"
-                    (ngModelChange)="onHtmlNotesChanged($event)"
-                    name="notes"
-                    [name]="model.property"
-                    #control="ngModel"
-          ></p-editor>
-          <pc-validation-errors [errorsKeys]="model.validationErrors"
-                                *ngIf="control.touched"
-          ></pc-validation-errors>
-        </div>
-      </div>
-
-    </div>
-
-    <div class="validation-errors" *ngIf="hasValidationErrors  | async">
-      <pc-validation-errors [errorsKeys]="unboundErrorMessages | async"
-      ></pc-validation-errors>
     </div>
 
     <div class="actions">
-      <button type="submit" hidden></button>
-
       <button pButton type="button"
-              [disabled]="!cultureForm.valid || (hasValidationErrors | async)"
-              (click)="onSubmit()"
-              label="Save" i18n-label></button>
-
+              class="secondary"
+              label="Previous step"
+              [disabled]="(activeStepIndex$ | async) <= 0"
+              (click)="goToPrevStep()"
+      ></button>
       <button pButton type="button"
-              class="ui-button-secondary"
-              (click)="onCancel()"
-              label="Cancel" i18n-label></button>
+              *ngIf="(activeStepId$ | async) !== STEP_ID_PREPARATION "
+              label="Next"
+              (click)="validateStep()"
+      ></button>
+      <button pButton type="button"
+              *ngIf="(activeStepId$ | async) === STEP_ID_PREPARATION "
+              label="OK"
+              [disabled]="(activeStepValid$ | async) === false"
+              (click)="validateStep()"
+      ></button>
     </div>
   </form>
 </div>
