--- a/src/app/shared/new-crop-form/new-crop-form.component.html
+++ b/src/app/shared/new-crop-form/new-crop-form.component.html
@@ -1,16 +1,13 @@
 <div class="crop-form ui-widget">
-  <header>
-    <h1 i18n>Crop edition</h1>
-  </header>
-
   <form #cropForm="ngForm" (submit)="onSubmit()" class="pc-form"
-        *ngIf="crop != null">
+        *ngIf="newCrop != null">
 
     <section class="agrovoc-search">
       <div class="row">
         <label i18n>FAO query</label>
         <pc-agrovoc-plant-product-tuple-select ngModel
                                                (ngModelChange)="onPlanProductTupleChange($event)"
+                                               [disabled]="disabled"
                                                name="crop-agrovoc-search"
                                                pcAutofocus
         ></pc-agrovoc-plant-product-tuple-select>
@@ -27,7 +24,9 @@
     <div class="row">
       <label i18n>Display name</label>
       <input pInputText
-             [(ngModel)]="crop.displayName"
+             [(ngModel)]="newCrop.displayName"
+             (ngModelChange)="onChange()"
+             [disabled]="disabled"
              name="crop-displayname"
              required>
     </div>
@@ -36,8 +35,9 @@
     <div class="row">
       <label i18n>Family</label>
       <input pInputText
-             [(ngModel)]="crop.family"
-             [disabled]="crop.agrovocPlantURI != null"
+             [(ngModel)]="newCrop.family"
+             (ngModelChange)="onChange()"
+             [disabled]="disabled || newCrop.agrovocPlantURI != null"
              required
              name="crop-family"
       >
@@ -47,8 +47,9 @@
     <div class="row">
       <label i18n>Species</label>
       <input pInputText
-             [(ngModel)]="crop.species"
-             [disabled]="crop.agrovocPlantURI != null"
+             [(ngModel)]="newCrop.species"
+             (ngModelChange)="onChange()"
+             [disabled]="disabled || newCrop.agrovocPlantURI != null"
              required
              name="crop-species"
       >
@@ -58,8 +59,9 @@
     <div class="row">
       <label i18n>Subspecies</label>
       <input pInputText
-             [(ngModel)]="crop.subSpecies"
-             [disabled]="crop.agrovocPlantURI != null"
+             [(ngModel)]="newCrop.subSpecies"
+             (ngModelChange)="onChange()"
+             [disabled]="disabled || newCrop.agrovocPlantURI != null"
              name="crop-subSpecies"
       >
     </div>
@@ -67,7 +69,9 @@
     <div class="row">
       <label i18n>Cultivar</label>
       <input pInputText
-             [(ngModel)]="crop.cultivar"
+             [(ngModel)]="newCrop.cultivar"
+             (ngModelChange)="onChange()"
+             [disabled]="disabled"
              name="crop-cultivar"
       >
     </div>
@@ -77,7 +81,7 @@
       <!--<button type="submit" hidden></button>-->
 
       <button pButton type="button"
-              [disabled]="!cropForm.valid"
+              [disabled]="disabled || !cropForm.valid"
               (click)="onSubmit()"
               label="Save" i18n-label></button>
 
