Culture step form: fixes

--- a/src/app/shared/bed-preparation-type-select/bed-preparation-type-select.component.html
+++ b/src/app/shared/bed-preparation-type-select/bed-preparation-type-select.component.html
@@ -3,7 +3,7 @@
                 (ngModelChange)="onChange($event)"
 >
   <ng-template let-item>
-    <pc-bed-preparation-type [type]="item"
+    <pc-bed-preparation-type [type]="item.value"
                              class="type-item"
     ></pc-bed-preparation-type>
   </ng-template>
