Translations & docker image fix

--- a/src/app/shared/crop-select/crop-select.component.html
+++ b/src/app/shared/crop-select/crop-select.component.html
@@ -22,7 +22,8 @@
     <div class="ui-helper-clearfix new-crop-item"
          *ngIf="item.createNewCropItem"
     >
-      {{ item.label }}
+      <div i18n>No result</div>
+      <div i18n>Click here to create a new crop</div>
     </div>
   </ng-template>
 </p-autoComplete>
