--- a/src/app/bed/bed-form/bed-form.component.html
+++ b/src/app/bed/bed-form/bed-form.component.html
@@ -17,6 +17,19 @@
     </div>
 
     <div class="row">
+      <label i18n>Surface</label>
+      <div>
+        <p-spinner name="bed-surface"
+                   [(ngModel)]="bed.surface"
+                   required
+                   [min]="0"
+                   [step]="0.01"
+        ></p-spinner>
+        <span class="unit" i18n>m²</span>
+      </div>
+    </div>
+
+    <div class="row">
       <label i18n>Patch</label>
       <pc-patch-input [(ngModel)]="bed.patch"
                       name="bed-patch"
