--- a/src/app/timeline/beds-timeline/beds-timeline.component.html
+++ b/src/app/timeline/beds-timeline/beds-timeline.component.html
@@ -25,7 +25,8 @@
 </div>
 
 <p-dialog [visible]="editingCulture != null"
-          header="Nouvelle culture"
+          header="New culture"
+          i18n-header
           styleClass="new-culture-dialog"
           [closable]="true"
           [closeOnEscape]="true"
