Timeline: edit on double click

--- a/src/app/timeline/beds-timeline/beds-timeline.component.html
+++ b/src/app/timeline/beds-timeline/beds-timeline.component.html
@@ -20,6 +20,7 @@
                  (itemMoving)="onItemMoving($event)"
                  (itemMoved)="onItemMoved($event)"
                  (backgroundClick)="onBackgroundClick($event)"
+                 (itemDoubleClick)="onItemDoubleClick($event)"
     ></pc-timeline>
   </div>
 </div>
