--- a/src/app/main/menu/menu.component.html
+++ b/src/app/main/menu/menu.component.html
@@ -33,4 +33,12 @@
   </a>
 
 
+  <a class="timeline"
+    [routerLink]="['/calendar']"
+     routerLinkActive="active-link"
+     title="Calendar" i18n-title
+  >
+    <i class="fa fa-calendar-o"></i>
+  </a>
+
 </div>
