--- a/src/app/shared/culture/culture.component.html
+++ b/src/app/shared/culture/culture.component.html
@@ -16,6 +16,7 @@
     <pc-bed [id]="bedId | async"
             [showIcon]="true"
             [showPatch]="false"
+            [showSurface]="false"
     ></pc-bed>
   </span>
   <span class="preparation" *ngIf="showBedPreparation"
