--- a/src/app/calendar/culture-calendar/culture-calendar.component.html
+++ b/src/app/calendar/culture-calendar/culture-calendar.component.html
@@ -5,14 +5,33 @@
       <h1 i18n>Cultures</h1>
     </header>
 
+    <div class="filter">
+      <div class="grouping-type">
+        <label i18n>Grouping</label>
+        <div>
+          <pc-grouping-type-select [ngModel]="groupingType"
+                                   (ngModelChange)="onGroupingTypeChanged($event)"
+          ></pc-grouping-type-select>
+        </div>
+      </div>
+      <div class="start-date">
+        <label i18n>Start</label>
+        <div>
+          <pc-date-select name="start-date"
+                          [ngModel]="startDateString"
+                          (ngModelChange)="onStartDateChanged($event)"
+          ></pc-date-select>
+        </div>
+      </div>
+    </div>
 
     <div class="groups" *ngFor="let group of groups; trackBy: trackByStartDate">
       <pc-calendar-group-row [group]="group"></pc-calendar-group-row>
     </div>
 
-    <ng-template class="loading" *ngIf="loading$ | async">
+    <div class="loading-panel" *ngIf="loading$ | async">
       <p-progressSpinner></p-progressSpinner>
-    </ng-template>
+    </div>
 
   </div>
 </div>
