Content scroll service

--- a/src/app/calendar/culture-calendar/culture-calendar.component.scss
+++ b/src/app/calendar/culture-calendar/culture-calendar.component.scss
@@ -1,7 +1,6 @@
 
-.culture-calendar-scrollable {
-  height: 100%;
-  overflow: auto;
+.culture-calendar {
+  position: relative;
 
   @media print {
     height: auto;
